defined state, first work on timeslider

--- a/h3/client3/src/app/components/timeslider/timeslider.component.css
+++ b/h3/client3/src/app/components/timeslider/timeslider.component.css
@@ -1,4 +1,15 @@
 .timeslider {
     background-color: var(--light-medium);
     border-radius: 0.25rem;
+
+    display: flex;
+    flex-direction: row;
+}
+
+.timeslider .timeStep {
+
+}
+
+.timeslider .timeStep.active {
+    border: 1px solid var(--primary-medium);
 }
