--- a/h3/client3/src/app/components/timeslider/timeslider.component.html
+++ b/h3/client3/src/app/components/timeslider/timeslider.component.html
@@ -1,3 +1,7 @@
 <div class="timeslider">
-    
+    <ng-container *ngIf="state$ | async as state">
+        <div *ngFor="let time of state.availableTimes" class="timeStep" [class.active]="time === state.currentTime">
+            <p>{{ time | date: 'dd-MM-yyyy' }}</p>
+        </div>
+    </ng-container>
 </div>
