handling visibility with control

--- a/h3/client3/src/app/app.component.css
+++ b/h3/client3/src/app/app.component.css
@@ -21,9 +21,9 @@
 }
 
 .app .main .timeslider {
-    position: relative;
-    width: 50%;
+    position: absolute;
+    width: 200px;
     height: 5%;
-    bottom: 3rem;
-    left: 25%;
+    bottom: 5rem;
+    left: calc((100vw - 200px) / 2);
 }
