--- a/h3/client3/src/app/components/timeslider/timeslider.component.html
+++ b/h3/client3/src/app/components/timeslider/timeslider.component.html
@@ -1,13 +1,23 @@
-<div class="timeslider">
+<div class="control">
     <ng-container *ngIf="state$ | async as state">
-        <div [class.active]="state.previous" class="timeStep" click="stepClicked(state.previous)">
-            <<
+        <div class="timeslider">
+            <div [class.active]="state.previous" class="timeStep" (click)="stepClicked(state.previous)">
+                <p><<</p>
+            </div>
+            <div >
+                <p>{{ state.currentTime | date: 'dd-MM-yyyy' }}</p>
+            </div>
+            <div [class.active]="state.next" class="timeStep" (click)="stepClicked(state.next)">
+                <p>>></p>
+            </div>
         </div>
-        <div class="timeStep">
-            <p>{{ state.currentTime | date: 'dd-MM-yyyy' }}</p>
-        </div>
-        <div [class.active]="state.next" class="timeStep" click="stepClicked(state.next)">
-            >>
+        <div class="layers">
+            <div class="layer" (click)="layerClicked('raster', !state.rasterVisible)">
+                <p>Raster</p>
+            </div>
+            <div class="layer" (click)="layerClicked('vector', !state.vectorVisible)">
+                <p>Vector</p>
+            </div>
         </div>
     </ng-container>
 </div>
