--- a/h3/client3/src/styles.css
+++ b/h3/client3/src/styles.css
@@ -21,6 +21,7 @@ body {
     --light-medium: #e8e8ee;
     --primary-light: #7abbc9;
     --primary-medium: #699eaa;
+    --primary-dark: #43636b;
     font-family: Nunito;
     box-sizing: border-box;
     margin: 0;
