--- a/h3/client3/src/app/components/map/map.component.css
+++ b/h3/client3/src/app/components/map/map.component.css
@@ -2,3 +2,12 @@
     width: 100%;
     height: 100%;
 }
+
+.popup {
+    background-color: var(--light-medium);
+    border-radius: 0.25rem;
+}
+
+.popup .popupBody {
+
+}
