--- a/h3/client4/src/style.css
+++ b/h3/client4/src/style.css
@@ -2,6 +2,10 @@ body {
   margin: 0;
 }
 
+.bw {
+  filter: grayscale(100%);
+}
+
 #app {
   width: 100%;
   height: 100vh;
@@ -17,6 +21,20 @@ body {
   padding: 0.5rem;
 }
 
-#popup p {
 
+#control {
+  position: absolute;
+  top: 0.5rem;
+  right: 0.5rem;
+  width: 200px;
+  height: 200px;
+  background-color: rgb(232, 233, 234);
+  border-radius: 0.25rem;
+  border: 1px solid rgb(198, 198, 198);
+  padding: 0.5rem;
+}
+
+#control .modeselect {
+  display: flex;
+  flex-direction: row;
 }
