ui event handling

--- a/h3/client4/src/style.css
+++ b/h3/client4/src/style.css
@@ -37,4 +37,19 @@ body {
 #control .modeselect {
   display: flex;
   flex-direction: row;
+  align-items: center;
+}
+
+#control .active {
+
+}
+
+#control .inactive {
+  color: rgb(198, 198, 198);
+}
+
+#timeControl {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
