--- a/h3/client4/src/style.css
+++ b/h3/client4/src/style.css
@@ -14,7 +14,7 @@ body {
 
 #popup {
   width: 200px;
-  height: 50px;
+  /* height: 50px; */
   background-color: rgb(232, 233, 234);
   border-radius: 0.25rem;
   border: 1px solid rgb(198, 198, 198);
@@ -27,7 +27,7 @@ body {
   top: 0.5rem;
   right: 0.5rem;
   width: 200px;
-  height: 200px;
+  /* height: 200px; */
   background-color: rgb(232, 233, 234);
   border-radius: 0.25rem;
   border: 1px solid rgb(198, 198, 198);
