--- a/thermal/client/src/style.css
+++ b/thermal/client/src/style.css
@@ -14,7 +14,6 @@ body {
 
 #popup {
   width: 300px;
-  /* height: 50px; */
   background-color: rgb(232, 233, 234);
   border-radius: 0.25rem;
   border: 1px solid rgb(198, 198, 198);
@@ -27,7 +26,6 @@ body {
   top: 0.5rem;
   right: 0.5rem;
   width: 215px;
-  /* height: 200px; */
   background-color: rgb(232, 233, 234);
   border-radius: 0.25rem;
   border: 1px solid rgb(198, 198, 198);
@@ -48,15 +46,16 @@ body {
   color: rgb(198, 198, 198);
 }
 
-#modeSelectMean {
+
+.contolElement {
   outline: 1px dotted rgb(198, 198, 198);
   margin: 1px;
   padding: 0 0.5rem 0 0.5rem;
 }
+
+#modeSelectMean {
+}
 #modeSelectTime {
-  outline: 1px dotted rgb(198, 198, 198);
-  margin: 1px;
-  padding: 0 0.5rem 0 0.5rem;
 }
 
 #timeControl {
@@ -72,4 +71,11 @@ body {
 
 #timeControl .inactive button {
   color:  rgb(198, 198, 198);
+}
+
+#statisticSelect {
+}
+
+.statisticsSelectItem {
+
 }
